fix: fixed wrong margin calculations due to incorrect marker-size variable

--- a/components/ContactTimeline/src/_ContactTimelineStep.scss
+++ b/components/ContactTimeline/src/_ContactTimelineStep.scss
@@ -1,5 +1,6 @@
 .denhaag-contact-timeline__step {
   &.denhaag-process-steps__step {
     --denhaag-process-steps-step-padding-block-end: var(--denhaag-contact-timeline-step-padding-block-end);
+    --denhaag-step-marker-size: var(--denhaag-step-marker-nested-size);
   }
 }
